Add Card Container & Form Styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </h1>
 
     <div id="cards-container" class="cards">
-      <div class="card active">
+      <!-- <div class="card active">
         <div class="inner-card">
           <div class="inner-card-front">
             <p>What is React?</p>
@@ -39,7 +39,7 @@
             <p>A runtime environment for running JS outside browser</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div id="navigation">
@@ -69,7 +69,7 @@
         <textarea id="answer" placeholder="Enter answer..."></textarea>
       </div>
       <button id="add-card" class="btn">
-        <i class="fas fa-plus"></i>
+        <i class="fas fa-plus"></i> Add new card
       </button>
     </div>
 
